# soutien-prog-back

./: .env  Cargo.toml  README.md
migration/: up.sql
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2021-04-18-214012_soutien/: up.sql
soutien_prog_back_rewriting/: .gitignore  Procfile  manage.py  requirements  requirements.txt
soutien_prog_back_rewriting/course/: models.py  serializers.py  urls.py  views.py
soutien_prog_back_rewriting/course/migrations/: 0001_initial.py  0002_auto_20210622_1349.py  0003_auto_20210622_1426.py  0004_auto_20210623_1422.py  0005_auto_20210623_1457.py  0006_course_course_name.py  0007_alter_course_course_name.py  0008_course_link.py  0009_alter_course_link.py  0010_alter_course_link.py  0011_alter_course_link.py  0012_alter_course_link.py  0013_alter_course_link.py  0014_rename_link_course_link_to.py  0015_rename_link_to_course_link.py  0016_rename_link_course_link_to.py  0017_alter_course_link_to.py  0018_alter_course_link_to.py
soutien_prog_back_rewriting/participant/: models.py  serializers.py  urls.py  views.py
soutien_prog_back_rewriting/participant/migrations/: 0001_initial.py  0002_auto_20210622_1426.py  0003_auto_20210623_1446.py  0004_alter_participant_name.py  (+1 more)
soutien_prog_back_rewriting/schoolmodule/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
soutien_prog_back_rewriting/soutien_prog_back_rewriting/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/: crud.rs  database.rs  main.rs  model.rs  schema.rs
src/handlers/: courses.rs  hello.rs  mod.rs
(+6 files in other folders)
