[package]
name = "soutien-prog-back"
version = "0.1.0"
authors = ["Rached Mejri <r.mejri74100@gmail.com@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
gotham = "0.6.0"
jwt = "0.13.0"